# ConsoleMVC-djdj07

./: CLAUDE.md  CMakeLists.txt  README.md
src/: main.cpp
src/controller/: ItemController.cpp  ItemController.h
src/model/: Item.h  ItemRepository.cpp  ItemRepository.h
src/view/: ConsoleView.cpp  ConsoleView.h  IView.h
tests/: CMakeLists.txt  ConsoleViewTest.cpp  ItemControllerTest.cpp  ItemRepositoryTest.cpp  StubView.h
